# flutter_godot_bridge

./: README.md  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  godot_bridge.cpp  godot_bridge.h
example/: README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/RunnerTests/: RunnerTests.swift
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  (+1 more)
ios/: flutter_godot_bridge.podspec
ios/Classes/: CommunicationBridge.swift  FlutterGodotBridgePlugin.h  FlutterGodotBridgePlugin.m  FlutterGodotBridgePlugin.swift  GodotViewFactory.h  GodotViewFactory.m
lib/: flutter_godot_bridge.dart  flutter_godot_bridge_method_channel.dart  flutter_godot_bridge_platform_interface.dart  flutter_godot_bridge_web.dart
lib/src/: native_bindings.dart
linux/: CMakeLists.txt  flutter_godot_bridge_plugin.cc  flutter_godot_bridge_plugin_private.h
linux/test/: flutter_godot_bridge_plugin_test.cc
macos/: flutter_godot_bridge.podspec
macos/Classes/: FlutterGodotBridgePlugin.swift
test/: flutter_godot_bridge_method_channel_test.dart  flutter_godot_bridge_test.dart
windows/: CMakeLists.txt  flutter_godot_bridge_plugin.cpp  flutter_godot_bridge_plugin.h  flutter_godot_bridge_plugin_c_api.cpp
windows/test/: flutter_godot_bridge_plugin_test.cpp
(+21 files in other folders)
